--- a/Unsplash/Classes/Supporting Files/Info.plist
+++ b/Unsplash/Classes/Supporting Files/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>API Key</key>
+	<string>4v32RoYn9h1F9ezi7QOZp1MtnmgDxDesHtab34J8DI0</string>
+	<key>Server URL</key>
+	<string>${API_URL}</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
